--- a/src/main/metadata/classes/TriggerLeadTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/TriggerLeadTriggerHandlerJP.cls
@@ -8,11 +8,28 @@ public class TriggerLeadTriggerHandlerJP
 {
     public void handleTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter)
     {
+        System.debug('Handletrigger----->');
         if(isBefore && isUpdate)
         {
             LeadHelperJP.updateCustomerStage(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, (Map<Id,Lead__C>)Trigger.NewMap);
             
         }
+     
+        if(isAfter && isInsert){
+            LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
+            
+        }
+        if(isAfter && isUpdate){
+            system.debug('Isafter is working');
+            LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
+            
+        }
+        
+        /*if(isInsert)
+        {
+            system.debug('Isafter is working%%%%%%');
+            Lead_AccountLinkCreate.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);    
+        }*/
     }
     public void handleIntegrationTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter)
     {
