--- a/src/main/metadata/classes/TriggerLeadTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/TriggerLeadTriggerHandlerJP.cls
@@ -15,15 +15,17 @@ public class TriggerLeadTriggerHandlerJP
             LeadHelperJP.updateCustomerStage(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, (Map<Id,Lead__C>)Trigger.NewMap);
             
         }
-     
-        if(isAfter && isInsert && usr.Profile.Name != 'IntegrationAPI'){
-            LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
+        system.debug('LeadUtil.isCreated-->'+LeadUtil.isCreated);
+        system.debug('insert-->'+isInsert);
+        if(isAfter && isInsert && usr.Profile.Name != 'IntegrationAPI' && LeadUtil.isCreated){
             
+            LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
+            LeadUtil.isCreated = false;
         }
-        if(isAfter && isUpdate && usr.Profile.Name != 'IntegrationAPI'){
+        if(isAfter && isUpdate && usr.Profile.Name != 'IntegrationAPI' && LeadUtil.isCreated){
             system.debug('Isafter is');
             LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
-            
+            LeadUtil.isCreated = false;
         }
     }
     public void handleIntegrationTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter)
