--- a/src/main/metadata/classes/TriggerLeadTriggerHandlerKR.cls
+++ b/src/main/metadata/classes/TriggerLeadTriggerHandlerKR.cls
@@ -16,7 +16,7 @@ public class TriggerLeadTriggerHandlerKR
             LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
             LeadUtil.isCreated = false;
         }
-        if(isAfter && isUpdate && usr.Profile.Name != 'IntegrationAPI'){
+        if(isAfter && isUpdate && usr.Profile.Name != 'IntegrationAPI' && LeadUtil.isCreated){
             system.debug('Isafter is working');
             LeadHelperAccountLinkCreateJP.leadAccountDetails(trigger.new, (Map<Id,Lead__C>)Trigger.OldMap, isInsert, isUpdate);
             LeadUtil.isCreated = false;
